...
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_queue_build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/title_run_build"
        app:icon="@drawable/ic_directions_run_white_24px" />
...

                <include layout="@layout/layout_branch_filter" />

                <include layout="@layout/layout_divider" />

                <LinearLayout
                    android:id="@+id/chooser_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_agents"
                        android:textAppearance="?attr/textAppearanceBody1" />

                    <TextView
                        android:id="@+id/selected_agent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/hint_default_filter_agent"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/material_on_background_emphasis_medium"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/text_no_agents_available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_no_agents_available"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/material_on_background_emphasis_medium"
...

                </LinearLayout>

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_is_personal"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_switcher_run_as_personal" />

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_queueAtTop"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_switcher_run_as_queue_at_the_top" />

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_clean_all_files"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/text_switcher_run_as_clean_all_files" />

...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_add_parameter"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_add_parameter" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_clear_parameters"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_16"
                            android:enabled="false"
                            android:text="@string/text_clear_parameters" />
...
