<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2026 Andrey Tolpeev

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
<string name="text_cancel_button">Cancel</string>
<string name="title_run_build">Run build</string>
<string name="text_build_branch">Build branch</string>
<string name="text_no_branches_available">No branches available</string>
<string name="text_no_branches_available_to_filter">No branches available to filter</string>
<string name="text_loading_branches">Loading branches</string>
<string name="hint_default_build_branch">Default branch</string>
<string name="error_base_error">Unable to run the build. Please try again.</string>
<string name="error_forbidden_error">You don\'t have permission to run this build.</string>
<string name="text_queueing_build">Queuing build…</string>
<string name="text_switcher_run_as_personal">Personal</string>
<string name="text_switcher_run_as_queue_at_the_top">Queue to the top</string>
<string name="text_switcher_run_as_clean_all_files">Clean all files before the build</string>
<string name="text_agents">Agent</string>
<string name="hint_default_filter_agent">The fastest idle agent</string>
<string name="text_no_agents_available">No agents available</string>
<string name="text_loading_agents">Loading agents</string>
<string name="title_agent_chooser_dialog">Choose agent</string>
<string name="text_parameters">Parameters</string>
<string name="text_add_parameter">Add</string>
<string name="text_clear_parameters">Clear all</string>
<string name="text_add_parameter_button">@string/text_add_parameter</string>
<string name="title_add_parameter">New parameter</string>
<string name="text_error_parameter_name">Name cannot be empty</string>
<string name="hint_parameter_name">Name</string>
<string name="hint_parameter_value">Value</string>
<string name="text_filters_none">None</string>
<string name="hint_default_filter_branch">Any</string>
<string name="quick_setup">Quick setup</string>
<string name="run_options">Run options</string>
<string name="edit_options">Edit</string>
<string name="hide_options">Hide</string>
<string name="run_options_summary">Personal: %1$s • Priority: %2$s • Clean sources: %3$s</string>
<string name="parameter_count">Custom parameters: %1$d</string>
<string name="option_on">On</string>
<string name="option_off">Off</string>
<string name="priority_top">Top</string>
<string name="priority_normal">Normal</string>
<string name="branches_unavailable">Unable to load branches. The default branch will be used.</string>
<string name="agents_unavailable">Unable to load agents. TeamCity will choose an agent.</string>
</resources>
