...
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/text_build_branch"
        android:textAppearance="?attr/textAppearanceBody1" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_branches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_default_build_branch"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:lines="1"
...
